feat: Implementacion delete (eliminacion logica) de plantillas udistrital/sisifo_documentacion#123
